--- a/道路分析.ipynb
+++ b/道路分析.ipynb
@@ -28,20 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "50a26aea-3cc8-42f1-bb5d-a31da36c3655",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import pickle\n",
     "\n",
-    "# with open('CalculatedData/mapper_graph1.pkl', 'wb') as f:\n",
+    "# with open('CalculatedData/new1.pkl', 'wb') as f:\n",
     "#     pickle.dump(mapper_graph1, f)\n",
     "\n",
-    "import pickle\n",
+    "# import pickle\n",
     "\n",
-    "with open('CalculatedData/mapper_graph1.pkl', 'rb') as f:\n",
-    "    mapper_graph1 = pickle.load(f)"
+    "# with open('CalculatedData/mapper_graph1.pkl', 'rb') as f:\n",
+    "#     mapper_graph1 = pickle.load(f)"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "4a1b9ca8-3782-44a5-b8bc-975a507f8190",
    "metadata": {},
    "outputs": [
@@ -99,12 +99,8 @@
        "      <th></th>\n",
        "      <th>光線名稱</th>\n",
        "      <th>道路類別-第1當事者-名稱</th>\n",
-       "      <th>速限-第1當事者</th>\n",
        "      <th>道路型態大類別名稱</th>\n",
        "      <th>事故位置大類別名稱</th>\n",
-       "      <th>路面狀況-路面鋪裝名稱</th>\n",
-       "      <th>路面狀況-路面缺陷名稱</th>\n",
-       "      <th>道路障礙-障礙物名稱</th>\n",
        "      <th>號誌-號誌種類名稱</th>\n",
        "      <th>車道劃分設施-分向設施大類別名稱</th>\n",
        "      <th>車道劃分設施-分道設施-快車道或一般車道間名稱</th>\n",
@@ -122,12 +118,8 @@
        "      <th>0</th>\n",
        "      <td>0.146102</td>\n",
        "      <td>2.120706</td>\n",
-       "      <td>-0.146069</td>\n",
        "      <td>1.210906</td>\n",
        "      <td>0.485564</td>\n",
-       "      <td>-0.045604</td>\n",
-       "      <td>-0.029347</td>\n",
-       "      <td>0.001515</td>\n",
        "      <td>-0.713755</td>\n",
        "      <td>-1.627801</td>\n",
        "      <td>1.771301</td>\n",
@@ -143,12 +135,8 @@
        "      <th>1</th>\n",
        "      <td>1.465217</td>\n",
        "      <td>-0.251720</td>\n",
-       "      <td>-0.146069</td>\n",
        "      <td>-0.814068</td>\n",
        "      <td>-0.872635</td>\n",
-       "      <td>-0.045604</td>\n",
-       "      <td>-0.029347</td>\n",
-       "      <td>0.001515</td>\n",
        "      <td>2.771975</td>\n",
        "      <td>-1.627801</td>\n",
        "      <td>-0.822895</td>\n",
@@ -164,12 +152,8 @@
        "      <th>2</th>\n",
        "      <td>-1.173013</td>\n",
        "      <td>2.911514</td>\n",
-       "      <td>-0.146069</td>\n",
        "      <td>1.210906</td>\n",
        "      <td>1.164664</td>\n",
-       "      <td>-0.045604</td>\n",
-       "      <td>-0.029347</td>\n",
-       "      <td>0.001515</td>\n",
        "      <td>-0.713755</td>\n",
        "      <td>1.177412</td>\n",
        "      <td>1.122752</td>\n",
@@ -185,12 +169,8 @@
        "      <th>3</th>\n",
        "      <td>-1.173013</td>\n",
        "      <td>-0.251720</td>\n",
-       "      <td>-0.146069</td>\n",
        "      <td>-0.814068</td>\n",
        "      <td>-0.872635</td>\n",
-       "      <td>-0.045604</td>\n",
-       "      <td>-0.029347</td>\n",
-       "      <td>0.001515</td>\n",
        "      <td>2.771975</td>\n",
        "      <td>-0.225194</td>\n",
        "      <td>-0.822895</td>\n",
@@ -206,12 +186,8 @@
        "      <th>4</th>\n",
        "      <td>1.465217</td>\n",
        "      <td>2.120706</td>\n",
-       "      <td>-0.146069</td>\n",
        "      <td>1.210906</td>\n",
        "      <td>1.164664</td>\n",
-       "      <td>-0.045604</td>\n",
-       "      <td>-0.029347</td>\n",
-       "      <td>0.001515</td>\n",
        "      <td>-0.713755</td>\n",
        "      <td>0.476109</td>\n",
        "      <td>-0.822895</td>\n",
@@ -228,19 +204,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       光線名稱  道路類別-第1當事者-名稱  速限-第1當事者  道路型態大類別名稱  事故位置大類別名稱  路面狀況-路面鋪裝名稱  \\\n",
-       "0  0.146102       2.120706 -0.146069   1.210906   0.485564    -0.045604   \n",
-       "1  1.465217      -0.251720 -0.146069  -0.814068  -0.872635    -0.045604   \n",
-       "2 -1.173013       2.911514 -0.146069   1.210906   1.164664    -0.045604   \n",
-       "3 -1.173013      -0.251720 -0.146069  -0.814068  -0.872635    -0.045604   \n",
-       "4  1.465217       2.120706 -0.146069   1.210906   1.164664    -0.045604   \n",
-       "\n",
-       "   路面狀況-路面缺陷名稱  道路障礙-障礙物名稱  號誌-號誌種類名稱  車道劃分設施-分向設施大類別名稱  \\\n",
-       "0    -0.029347    0.001515  -0.713755         -1.627801   \n",
-       "1    -0.029347    0.001515   2.771975         -1.627801   \n",
-       "2    -0.029347    0.001515  -0.713755          1.177412   \n",
-       "3    -0.029347    0.001515   2.771975         -0.225194   \n",
-       "4    -0.029347    0.001515  -0.713755          0.476109   \n",
+       "       光線名稱  道路類別-第1當事者-名稱  道路型態大類別名稱  事故位置大類別名稱  號誌-號誌種類名稱  車道劃分設施-分向設施大類別名稱  \\\n",
+       "0  0.146102       2.120706   1.210906   0.485564  -0.713755         -1.627801   \n",
+       "1  1.465217      -0.251720  -0.814068  -0.872635   2.771975         -1.627801   \n",
+       "2 -1.173013       2.911514   1.210906   1.164664  -0.713755          1.177412   \n",
+       "3 -1.173013      -0.251720  -0.814068  -0.872635   2.771975         -0.225194   \n",
+       "4  1.465217       2.120706   1.210906   1.164664  -0.713755          0.476109   \n",
        "\n",
        "   車道劃分設施-分道設施-快車道或一般車道間名稱  車道劃分設施-分道設施-快慢車道間名稱  車道劃分設施-分道設施-路面邊線名稱  \\\n",
        "0                 1.771301            -1.697696           -0.917071   \n",
@@ -257,7 +226,7 @@
        "4      1.798967  1.832866  0.186897  13.660843 -2.803204  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,9 +247,9 @@
     "select_lst = [\n",
     "    '光線名稱',\n",
     "    '道路類別-第1當事者-名稱',\n",
-    "    '速限-第1當事者', #'道路障礙-視距品質名稱', # 和速限共線\n",
+    "    # '速限-第1當事者', #'道路障礙-視距品質名稱', # 和速限共線\n",
     "    '道路型態大類別名稱', '事故位置大類別名稱', \n",
-    "    '路面狀況-路面鋪裝名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', # 分類幾乎都是無缺陷\n",
+    "    # '路面狀況-路面鋪裝名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', # 分類幾乎都是無缺陷\n",
     "    '號誌-號誌種類名稱',\n",
     "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
     "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
@@ -296,7 +265,7 @@
     "rbind_data = pd.concat([dist_dfA1[0], dist_dfA2[0]], axis=0, ignore_index=True)\n",
     "\n",
     "rbind_data.loc[rbind_data['受傷'] > 1, '受傷'] = 2\n",
-    "rbind_data['速限-第1當事者'] = rbind_data['速限-第1當事者'].apply(lambda x: 1 if x > 60 else 0)\n",
+    "# rbind_data['速限-第1當事者'] = rbind_data['速限-第1當事者'].apply(lambda x: 1 if x > 60 else 0)\n",
     "\n",
     "dist_df = process_data(rbind_data)\n",
     "scaler = StandardScaler()\n",
@@ -309,17 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "b20c6e6f-4ec9-41f3-b409-5c3e42822efe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(65304, 19)"
+       "(121012, 18)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,11 +300,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a25d0823-bc61-4ee9-b630-d413c0cbd879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 最佳模型\n",
+    "# start_time = time.time()\n",
+    "\n",
+    "# lens1 = PCA(10).fit_transform(X1)\n",
+    "\n",
+    "# mapper_algo1 = MapperAlgorithm(\n",
+    "#     cover = CubicalCover(\n",
+    "#         n_intervals = 4,\n",
+    "#         overlap_frac = 0.4\n",
+    "#     ),\n",
+    "#     clustering = FailSafeClustering(\n",
+    "#         clustering = AgglomerativeClustering(3, linkage='ward'),\n",
+    "#         verbose = False)\n",
+    "# )\n",
+    "\n",
+    "# mapper_graph1 = mapper_algo1.fit_transform(X1, lens1)\n",
+    "\n",
+    "# end_time = time.time()\n",
+    "# elapsed_time = end_time - start_time\n",
+    "# print(elapsed_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "d9c2f4d2-8a66-47fe-8960-2ef3bc8f4732",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343.48361802101135\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time()\n",
     "\n",
@@ -344,10 +350,10 @@
     "mapper_algo1 = MapperAlgorithm(\n",
     "    cover = CubicalCover(\n",
     "        n_intervals = 4,\n",
-    "        overlap_frac = 0.5\n",
+    "        overlap_frac = 0.35\n",
     "    ),\n",
     "    clustering = FailSafeClustering(\n",
-    "        clustering = AgglomerativeClustering(3, linkage='ward'),\n",
+    "        clustering = AgglomerativeClustering(2, linkage='ward'),\n",
     "        verbose = False)\n",
     ")\n",
     "\n",
@@ -360,25 +366,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "fe3decb5-c06e-4e9d-83b3-c1561027581e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper_plot1 = MapperLayoutInteractive(\n",
-    "    mapper_graph1,\n",
-    "    colors = dist_df[['速限-第1當事者']].to_numpy(),\n",
-    "    cmap = 'jet',\n",
-    "    # agg = np.nanmean,\n",
-    "    agg = most_frequent_nonan,\n",
-    "    dim = 3,\n",
-    "    iterations = 30,\n",
-    "    seed = 5,\n",
-    "    width = 800,\n",
-    "    height = 500)\n",
+    "# # 道路型態大類別名稱\n",
+    "# mapper_plot1 = MapperLayoutInteractive(\n",
+    "#     mapper_graph1,\n",
+    "#     colors = dist_df[['道路型態大類別名稱']].to_numpy(),\n",
+    "#     cmap = 'jet',\n",
+    "#     # agg = np.nanmean,\n",
+    "#     agg = most_frequent_nonan,\n",
+    "#     dim = 3,\n",
+    "#     iterations = 30,\n",
+    "#     seed = 5,\n",
+    "#     width = 800,\n",
+    "#     height = 500)\n",
     "\n",
-    "fig_mean1 = mapper_plot1.plot()\n",
-    "fig_mean1.show(config={'scrollZoom': True})"
+    "# fig_mean1 = mapper_plot1.plot()\n",
+    "# fig_mean1.show(config={'scrollZoom': True})"
    ]
   },
   {
@@ -391,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "0c96494c-8c3b-4a5d-ad7a-1964c9a082db",
    "metadata": {},
    "outputs": [],
@@ -435,30 +442,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "id": "b39641bd-6ccb-4a63-a794-6698dc1da523",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# import plotly.graph_objects as go\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
     "\n",
-    "calinski_data = get_calinski_from_db(full_info, 0.04)\n",
-    "labels = calinski_data[3]\n",
-    "db = calinski_data[2]\n",
-    "n_clusters_ = calinski_data[4]\n",
+    "# calinski_data = get_calinski_from_db(full_info, 0.015)\n",
+    "# labels = calinski_data[3]\n",
+    "# db = calinski_data[2]\n",
+    "# n_clusters_ = calinski_data[4]\n",
     "\n",
-    "unique_labels = set(labels)\n",
-    "core_samples_mask = np.zeros_like(labels, dtype=bool)\n",
-    "core_samples_mask[db.core_sample_indices_] = True\n",
+    "# unique_labels = set(labels)\n",
+    "# core_samples_mask = np.zeros_like(labels, dtype=bool)\n",
+    "# core_samples_mask[db.core_sample_indices_] = True\n",
     "\n",
-    "def matplotlib_to_plotly(cmap, alpha=1):\n",
-    "    \"\"\"rgba\"\"\"\n",
-    "    return f'rgba({int(cmap[0]*200)}, {int(cmap[1]*200)}, {int(cmap[2]*200)}, {alpha})'\n",
+    "# def matplotlib_to_plotly(cmap, alpha=1):\n",
+    "#     \"\"\"rgba\"\"\"\n",
+    "#     return f'rgba({int(cmap[0]*200)}, {int(cmap[1]*200)}, {int(cmap[2]*200)}, {alpha})'\n",
     "\n",
-    "# colors = [plt.cm.Spectral(each) for each in np.linspace(0, 1, len(unique_labels))]  \n",
-    "colors = [matplotlib_to_plotly(plt.cm.Spectral(each), alpha=0.8) for each in np.linspace(0, 1, len(unique_labels))]\n",
+    "# # colors = [plt.cm.Spectral(each) for each in np.linspace(0, 1, len(unique_labels))]  \n",
+    "# colors = [matplotlib_to_plotly(plt.cm.Spectral(each), alpha=0.8) for each in np.linspace(0, 1, len(unique_labels))]\n",
     "# fig = go.Figure()\n",
     "\n",
     "# for k, col in zip(unique_labels, colors):\n",
@@ -514,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "id": "1f12a785-60ad-469e-bc0b-83e9dea29a63",
    "metadata": {},
    "outputs": [
@@ -522,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0  1  2 -1]\n"
+      "[ 0  1 -1  2  3  4]\n"
      ]
     }
    ],
@@ -542,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "7cef480a-66b4-4ca6-8a78-e5cd0284a4ea",
    "metadata": {},
    "outputs": [
@@ -550,12 +557,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01連接點數量 220\n",
-      "02連接點數量 0\n",
-      "12連接點數量 0\n",
-      "各分群相加 120694\n",
-      "各分群大小 (112490, 17) (5737, 17) (2467, 17)\n",
-      "權重 1143301 34029 12916\n"
+      "01連接點數量 0\n",
+      "02連接點數量 16\n",
+      "12連接點數量 49\n",
+      "各分群相加 120056\n",
+      "各分群大小 (114580, 15) (2522, 15) (2954, 15)\n",
+      "權重 767145 9193 18736\n"
      ]
     }
    ],
@@ -611,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d36cdc23-5efc-4591-a740-9bf4be21023b",
    "metadata": {},
    "outputs": [],
@@ -630,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "699ae783-7491-4c60-a48b-e798123e867c",
    "metadata": {},
    "outputs": [
@@ -638,19 +645,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   features       VIF\n",
-      "0                      光線名稱  1.032768\n",
-      "1             道路類別-第1當事者-名稱  1.104346\n",
-      "2                  速限-第1當事者  8.809973\n",
-      "3               道路障礙-視距品質名稱  1.002979\n",
-      "4                 道路型態大類別名稱  5.065666\n",
-      "5                 事故位置大類別名稱  4.514167\n",
-      "6                 號誌-號誌種類名稱  1.436095\n",
-      "7          車道劃分設施-分向設施大類別名稱  1.711111\n",
-      "8   車道劃分設施-分道設施-快車道或一般車道間名稱  1.563478\n",
-      "9       車道劃分設施-分道設施-快慢車道間名稱  1.111139\n",
-      "10       車道劃分設施-分道設施-路面邊線名稱  1.295200\n",
-      "11             事故類型及型態大類別名稱  8.164723\n"
+      "                  features       VIF\n",
+      "0                     光線名稱  1.009844\n",
+      "1            道路類別-第1當事者-名稱  1.016431\n",
+      "2                道路型態大類別名稱  5.838461\n",
+      "3                事故位置大類別名稱  5.479225\n",
+      "4                號誌-號誌種類名稱  1.397519\n",
+      "5         車道劃分設施-分向設施大類別名稱  1.068934\n",
+      "6  車道劃分設施-分道設施-快車道或一般車道間名稱  1.122531\n",
+      "7      車道劃分設施-分道設施-快慢車道間名稱  1.056576\n",
+      "8       車道劃分設施-分道設施-路面邊線名稱  1.125107\n",
+      "9             事故類型及型態大類別名稱       NaN\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\anaconda3\\lib\\site-packages\\statsmodels\\regression\\linear_model.py:1738: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n"
      ]
     }
    ],
@@ -663,7 +678,7 @@
     "select_lst = [\n",
     "    '光線名稱',\n",
     "    '道路類別-第1當事者-名稱',\n",
-    "    '速限-第1當事者', '道路障礙-視距品質名稱', # 和速限共線\n",
+    "    #'速限-第1當事者', #'道路障礙-視距品質名稱', # 和速限共線\n",
     "    '道路型態大類別名稱', '事故位置大類別名稱', \n",
     "    # '路面狀況-路面鋪裝名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', # 分類幾乎都是無缺陷\n",
     "    '號誌-號誌種類名稱',\n",
@@ -708,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "19e029cb-d701-4f1e-b586-7229dc1a1d2e",
    "metadata": {},
    "outputs": [],
@@ -718,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "58b4240a-0e87-4c71-8c6f-c3d93fd5d6de",
    "metadata": {},
    "outputs": [],
@@ -738,6 +753,25 @@
     "    p['feature'] = p.index\n",
     "    \n",
     "    return full_logit_X, full_logit_y, p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fb619d4e-0a5a-4dbe-b15e-c9ad1c826958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_regression = [\n",
+    "    '光線名稱',\n",
+    "    '道路類別-第1當事者-名稱',\n",
+    "    '道路型態大類別名稱', '事故位置大類別名稱',\n",
+    "    '號誌-號誌種類名稱',\n",
+    "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+    "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '事故類型及型態大類別名稱',\n",
+    "]\n",
+    "X01, y01, p01 = pval(full_1, full_2, lst_regression)"
    ]
   },
   {
