--- a/道路分析_模型比較.ipynb
+++ b/道路分析_模型比較.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "eb98f91b-c2f3-4219-b28a-44e793c5ac5a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d07eda9f-993f-4c59-9a58-0e18e2a04edc",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f4c4dd2b-2b5e-4e91-a2b5-ab66bcccca26",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,27 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8291f814-8a2a-4da2-afe0-d6259271f54d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pickle\n",
+    "import pickle\n",
     "\n",
-    "# with open('CalculatedData/mapper_graph1.pkl', 'rb') as f:\n",
-    "#     mapper_graph1 = pickle.load(f)\n",
+    "with open('CalculatedData/mapper_graph1.pkl', 'rb') as f:\n",
+    "    mapper_graph1 = pickle.load(f)\n",
     "    \n",
-    "# mapper_plot1 = MapperLayoutInteractive(\n",
-    "#     mapper_graph1,\n",
-    "#     colors = dist_df[['速限-第1當事者']].to_numpy(),\n",
-    "#     cmap = 'jet',\n",
-    "#     # agg = np.nanmean,\n",
-    "#     agg = most_frequent_nonan,\n",
-    "#     dim = 3,\n",
-    "#     iterations = 30,\n",
-    "#     seed = 6,\n",
-    "#     width = 800,\n",
-    "#     height = 500)\n",
+    "mapper_plot1 = MapperLayoutInteractive(\n",
+    "    mapper_graph1,\n",
+    "    colors = dist_df[['速限-第1當事者']].to_numpy(),\n",
+    "    cmap = 'jet',\n",
+    "    # agg = np.nanmean,\n",
+    "    agg = most_frequent_nonan,\n",
+    "    dim = 3,\n",
+    "    iterations = 30,\n",
+    "    seed = 6,\n",
+    "    width = 800,\n",
+    "    height = 500)\n",
     "\n",
     "# fig_mean1 = mapper_plot1.plot()\n",
     "# fig_mean1.show(config={'scrollZoom': True})"
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e910bdd0-7964-4245-99d3-a41a6034f0d3",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ffc9c91c-1aee-4fbe-b009-3b9b31273769",
    "metadata": {
     "tags": []
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "93ad12dc-e96c-45ad-bbc7-2040399ba1f4",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "131"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "id": "80da4fd5-6c42-44a1-a043-beb94bc13388",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "False"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,6 +580,24 @@
     "print('離群值數量', full_out.shape[0])\n",
     "\n",
     "full_combine.shape[0] + full_0.shape[0] + full_1.shape[0] + full_2.shape[0] == rbind_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "927a846d-2123-4069-9633-d8bb456b5be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(count_0.keys() & count_1.keys()))"
    ]
   },
   {
