--- a/link_outlier.ipynb
+++ b/link_outlier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "bd0e9d32-3828-4a13-b1ea-75e1bd6a3933",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b5779be9-a19c-40bc-9b58-21ad0fd6e13d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "efd316d1-7ea6-4c63-a43d-a04851bf8082",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "e89f32e9-7b25-4764-917c-4823d7bee49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_combine[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "5d4c7c44-212c-46e5-8532-7a3653be0b94",
    "metadata": {},
    "outputs": [],
@@ -293,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "97ce6284-3669-4a16-8c96-65b674e78c38",
    "metadata": {},
    "outputs": [
@@ -313,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "19540a7e-ac8f-4b8f-b1e4-e9af1c89d25c",
    "metadata": {
     "collapsed": true,
@@ -411,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "206ba14c-d805-45c7-af20-11eb22eb912c",
    "metadata": {},
    "outputs": [
@@ -431,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "c41a889a-8157-49dd-964a-ae1bf36a765d",
    "metadata": {},
    "outputs": [
@@ -448,7 +458,7 @@
       "Model:                          Logit   Df Residuals:                      252\n",
       "Method:                           MLE   Df Model:                           27\n",
       "Date:                Sat, 29 Jun 2024   Pseudo R-squ.:                  0.9138\n",
-      "Time:                        11:44:30   Log-Likelihood:                -16.049\n",
+      "Time:                        20:52:49   Log-Likelihood:                -16.049\n",
       "converged:                       True   LL-Null:                       -186.23\n",
       "Covariance Type:            nonrobust   LLR p-value:                 5.998e-56\n",
       "===========================================================================================\n",
@@ -536,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "c37642ae-8793-4367-b72d-7ae202cf16c3",
    "metadata": {},
    "outputs": [
@@ -557,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 16,
    "id": "d0687f18-6e59-4b10-ab3f-7825bca9a9dc",
    "metadata": {},
    "outputs": [
@@ -620,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 17,
    "id": "8352656d-252f-41b7-bea8-f1e20097ccb1",
    "metadata": {},
    "outputs": [
@@ -637,6 +647,29 @@
    ],
    "source": [
     "plot_bar_comparison(full_combine, full_out, '事故類型及型態大類別名稱')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a2e3a237-79db-4cea-81d2-7551d7a91b2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "人與車    214\n",
+       "車與車      6\n",
+       "Name: 事故類型及型態大類別名稱, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_combine['事故類型及型態大類別名稱'].value_counts()"
    ]
   },
   {
