--- a/link_outlier.ipynb
+++ b/link_outlier.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "b5779be9-a19c-40bc-9b58-21ad0fd6e13d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "efd316d1-7ea6-4c63-a43d-a04851bf8082",
    "metadata": {},
    "outputs": [],
@@ -241,12 +241,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e89f32e9-7b25-4764-917c-4823d7bee49b",
+   "execution_count": 9,
+   "id": "0343b0c9-c48f-4c59-8942-b2434562f862",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(220, 29)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "full_combine[]"
+    "full_combine.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "05d97040-15b7-41a6-8763-17a3e98876e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(131, 31)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_out.shape"
    ]
   },
   {
