--- a/道路分析_模型比較.ipynb
+++ b/道路分析_模型比較.ipynb
@@ -319,391 +319,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "8f2d28f4-b6fa-42cf-bfeb-22dfdff98448",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>天候名稱</th>\n",
-       "      <th>路面狀況-路面狀態名稱</th>\n",
-       "      <th>肇因研判大類別名稱-主要</th>\n",
-       "      <th>當事者屬-性-別名稱</th>\n",
-       "      <th>當事者事故發生時年齡</th>\n",
-       "      <th>車輛撞擊部位大類別名稱-最初</th>\n",
-       "      <th>光線名稱</th>\n",
-       "      <th>道路類別-第1當事者-名稱</th>\n",
-       "      <th>速限-第1當事者</th>\n",
-       "      <th>道路型態大類別名稱</th>\n",
-       "      <th>...</th>\n",
-       "      <th>肇因研判大類別名稱-個別</th>\n",
-       "      <th>肇事逃逸類別名稱-是否肇逃</th>\n",
-       "      <th>路面狀況-路面鋪裝名稱</th>\n",
-       "      <th>路面狀況-路面缺陷名稱</th>\n",
-       "      <th>道路障礙-障礙物名稱</th>\n",
-       "      <th>道路障礙-視距品質名稱</th>\n",
-       "      <th>道路障礙-視距名稱</th>\n",
-       "      <th>號誌-號誌動作名稱</th>\n",
-       "      <th>死亡</th>\n",
-       "      <th>受傷</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121007</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121008</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121009</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121010</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121011</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>121012 rows × 43 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        天候名稱  路面狀況-路面狀態名稱  肇因研判大類別名稱-主要  當事者屬-性-別名稱  當事者事故發生時年齡  \\\n",
-       "0          0            0             9           3           1   \n",
-       "1          0            0             9           3           3   \n",
-       "2          1            0             9           3           3   \n",
-       "3          0            0             9           3           2   \n",
-       "4          1            0             9           3           1   \n",
-       "...      ...          ...           ...         ...         ...   \n",
-       "121007     1            0             9           3           2   \n",
-       "121008     0            0             9           3           2   \n",
-       "121009     0            0             9           3           2   \n",
-       "121010     0            0             9           3           3   \n",
-       "121011     0            0             9           3          -1   \n",
-       "\n",
-       "        車輛撞擊部位大類別名稱-最初  光線名稱  道路類別-第1當事者-名稱  速限-第1當事者  道路型態大類別名稱  ...  \\\n",
-       "0                    1     1              6         0          2  ...   \n",
-       "1                    2     2              3         0          0  ...   \n",
-       "2                    1     0              7         0          2  ...   \n",
-       "3                    1     0              3         0          0  ...   \n",
-       "4                    1     2              6         0          2  ...   \n",
-       "...                ...   ...            ...       ...        ...  ...   \n",
-       "121007               2     0              3         0          0  ...   \n",
-       "121008               1     0              3         0          2  ...   \n",
-       "121009               1     0              3         0          2  ...   \n",
-       "121010               2     0              3         0          0  ...   \n",
-       "121011               0     2              5         0          2  ...   \n",
-       "\n",
-       "        肇因研判大類別名稱-個別  肇事逃逸類別名稱-是否肇逃  路面狀況-路面鋪裝名稱  路面狀況-路面缺陷名稱  道路障礙-障礙物名稱  \\\n",
-       "0                  9              0            1            1           3   \n",
-       "1                  9              0            1            1           3   \n",
-       "2                  9              0            1            1           3   \n",
-       "3                  9              0            1            1           3   \n",
-       "4                  9              0            1            1           3   \n",
-       "...              ...            ...          ...          ...         ...   \n",
-       "121007             9              0            1            1           3   \n",
-       "121008             9              0            1            1           3   \n",
-       "121009             9              0            1            1           3   \n",
-       "121010             9              0            1            1           3   \n",
-       "121011             9              0            1            1           3   \n",
-       "\n",
-       "        道路障礙-視距品質名稱  道路障礙-視距名稱  號誌-號誌動作名稱  死亡  受傷  \n",
-       "0                 1          4          3   1   0  \n",
-       "1                 1          4          1   1   1  \n",
-       "2                 1          4          3   1   0  \n",
-       "3                 1          4          1   1   1  \n",
-       "4                 1          4          3   1   0  \n",
-       "...             ...        ...        ...  ..  ..  \n",
-       "121007            1          4          1   0   1  \n",
-       "121008            1          4          1   0   1  \n",
-       "121009            1          4          3   0   1  \n",
-       "121010            0          5          3   0   1  \n",
-       "121011            1          4          3   0   1  \n",
-       "\n",
-       "[121012 rows x 43 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dist_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "id": "8291f814-8a2a-4da2-afe0-d6259271f54d",
    "metadata": {},
@@ -1720,7 +1335,13 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "1f8ab38a-c198-40d3-8031-de64669024ae",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
